# Code-projet-M2-TMR-2014-2015

./: CMakeLists.txt  README.md  correction.cpp  correction.h  data2img.cpp  data2img.h  loadtextfile.cpp  loadtextfile.h  main.cpp
CODE_GPHY/: correction_deform.py
CODE_GPHY/photonique_final/photonique/: Makefile  correction.cpp  main.cpp  matcher.cpp
CODE_GPHY/photonique_final/photonique/Olga_Yousra/: invc.h
CODE_GPHY/photonique_final/photonique/include/opencv2/: opencv_modules.hpp
CODE_GPHY/photonique_final/photonique/nbproject/: Makefile-Debug.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash
Codes_GPHY/: .gitignore  correction.h  io.cpp  matcher.h  optimization.h
Codes_GPHY/Matching/: ECC.h  TemplateMatching.cpp
Codes_GPHY/Olga_Yousra/: invc.cpp
Codes_GPHY/nbproject/: Makefile-Release.mk  Makefile-impl.mk  configurations.xml  project.xml
Matching/: ECC.cpp  EstimateRigidT.h  stitching.cpp  stitching.h
Matthews_Baker_inverse_compositional/: main.cpp
Olga_Yousra/: alignement.cpp  alignement.h  main.cpp  xxx.cpp  xxx.h  xxx2.cpp  xxx2.h
Optimisation/: io.h  main.cpp  matcher.cpp  matcher.h  timer.h
Optimisation/Matching/: TemplateMatching.h
optimisation/: CMakeLists.txt  correction.cpp  data2img.h  loadtextfile.h
optimisation/Matching/: EstimateRigidT.cpp  stitching.cpp  stitching.h
test-stitching/: CMakeLists.txt  auxfunc.cpp  auxfunc.h  forwadditive.cpp  forwadditive.h  invcomp.cpp  invcomp.h  main.cpp
